tests/ui/transmute-mut-src-immutable.nightly.stderr
error[E0308]: mismatched types
  --> $DIR/transmute-mut-src-immutable.rs:16:37
   |
16 |     let _: &mut u8 = transmute_mut!(&0u8);
   |                      ---------------^^^^-
   |                      |              |
   |                      |              types differ in mutability
   |                      expected due to this
   |
   = note: expected mutable reference `&mut _`
                      found reference `&u8`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
